perf(Root): Avoid load flickering on /static/.

--- a/styles.css
+++ b/styles.css
@@ -215,3 +215,6 @@
     grid-column: span 4 / span 4;
   }
 }
+.hidden {
+  display: none;
+}
